# hack_my_robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
cfg/: smartCommon.cfg
launch/: hack_my_robot_complete.launch  smart_data_collection.launch  smart_node.launch  tools.launch
msg/: smartCommonData.msg
nodes/: hack_my_robot_node  hack_my_robot_node.py  import_module_node.py  smart_listener.py
rviz/: summit_xl_navigation.rviz  summit_xl_rviz.rviz
saved_path/: pose.csv  scan_positions.csv
src/hack_my_robot/: hack_my_robot.py  hack_my_robot_routine.py
src/smart_python_ros_node/: module_to_import.py
