<?xml version="1.0"?>
<package format="2">
  <name>hack_my_robot</name>
  <version>0.0.1</version>
  <description>Main routine for hack my robot competition</description>
 
  <maintainer email="samuel.prieto@nyu.edu">Samuel A. Prieto</maintainer>
  <author email="samuel.prieto@nyu.edu">Samuel A. Prieto</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rqt_console</build_depend>
  <build_depend>rqt_reconfigure</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>

  <depend>dynamic_reconfigure</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
